Fix canvas blurriness on high dpi displays
- What a piece of garbage that setup is; in what possible world
  would I want to render at a lower than native resolution? But
  that is what canvas does, and the workaround appear to be
  to lie about the canvas width in the html tag, correct it
  in CSS, and scale the canvas drawing commands by the
  ratio of the lie and the truth.

--- a/stc/style.css
+++ b/stc/style.css
@@ -150,20 +150,28 @@ table {
 canvas#map {
     border-style: none;
     border-width: 1px;
+    height: 500px;
+    width: 800px;
 }
 canvas#cults {
     border-style: none;
     border-width: 1px;
+    height: 500px;
+    width: 250px;
 }
 
 canvas.action {
     float: left;
+    height: 85px;
+    width: 50px;
 }
 
 canvas.colorcycle {
     float: left;
     margin: 0px;
     padding: 6px;
+    width: 90px;
+    height: 80px;
 }
 
 div#error {
